--- a/Pharmacy/Properties/Resources.resx
+++ b/Pharmacy/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="vial-solid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vial-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shop-solid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shop-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="user-regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user-regular.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -190,11 +193,11 @@
   <data name="hospital-user-solid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hospital-user-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shop-solid" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shop-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="trash-solid1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\trash-solid1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="document.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\document.png.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="handshake-regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\handshake-regular.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -207,6 +210,9 @@
   </data>
   <data name="person-solid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\person-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="floppy-disk-solid1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\floppy-disk-solid1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="flask-vial-solid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flask-vial-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -232,7 +238,7 @@
   <data name="prescription-bottle-solid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\prescription-bottle-solid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="floppy-disk-solid1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\floppy-disk-solid1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="add" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
